--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -13,6 +13,13 @@
         android:text="Enter Stack Name: "
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <TextView
+        android:id="@+id/categoryTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Category Name: "
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 
     <EditText
         android:id="@+id/editTextDialogUserInput"
