--- a/app/src/main/res/layout/content_play.xml
+++ b/app/src/main/res/layout/content_play.xml
@@ -26,67 +26,50 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="369dp" />
+        app:layout_constraintGuide_percent="0.85"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="327dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline4"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.04" />
+        app:layout_constraintGuide_percent="0.15"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="58dp" />
 
     <Button
         android:id="@+id/buttonNext"
-        android:layout_width="112dp"
-        android:layout_height="47dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="105dp"
+        android:layout_marginLeft="8dp"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="104dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/guideline3"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.306" />
+        app:layout_constraintLeft_toRightOf="@+id/buttonPrevious"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="357dp" />
 
     <Button
         android:id="@+id/buttonPrevious"
-        android:layout_width="113dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="103dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="105dp"
         android:text="Previous"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guideline2"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.617" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/buttonNext"
+        tools:layout_editor_absoluteY="357dp" />
 
     <Button
         android:id="@+id/buttonFlip"
-        android:layout_width="277dp"
-        android:layout_height="48dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="34dp"
         android:text="Flip"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="31dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="33dp"
-        app:layout_constraintRight_toLeftOf="@+id/guideline3"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="1.0" />
-
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline2"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="192dp"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
