--- a/app/src/main/res/layout/activity_edit_category.xml
+++ b/app/src/main/res/layout/activity_edit_category.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context="edu.mercy.flashstax.EditCategoryActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar3"
+        android:layout_width="384dp"
+        android:layout_height="57dp"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        tools:layout_editor_absoluteY="1dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="383dp"
+        android:layout_height="46dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        tools:layout_editor_absoluteY="58dp"
+        tools:layout_editor_absoluteX="2dp" />
 </android.support.constraint.ConstraintLayout>
